# wasm-zkp-challenge

./: .gitignore  Cargo.toml  README.md  serve.sh  webdriver.json
benches/: bench.rs  bench_fft_and_ifft.rs  bench_pairing.rs  bench_pippenger_msm.rs
src/: bench.rs  fft.rs  lib.rs  msm.rs  pairing.rs  pippenger_msm.rs  stream_pippenger.rs
tests/: web.rs
www/: index.html  index.js  package-lock.json
