[package]
name = "wasm-zkp-challenge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# `wasm-opt` is on by default in for the release profile, but it can be
# disabled by setting it to `false`
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
# wasm dependencies
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"]}
js-sys = "0.3.58"

# crypto dependencies
rand_chacha = { version = "0.3.1", default-features = false }
rand = { version = "0.7.3", features = ["wasm-bindgen"]}
rand_xorshift = { version = "0.2" }

ark-r1cs-std = { version = "0.3.1", optional = true, default-features = false }
ark-relations = { version = "0.3.0", optional = true, default-features = false }
ark-ed-on-bls12-381 = { version = "0.3.0", optional = true, default-features = false, features = ["r1cs"] }
ark-crypto-primitives = { version = "0.3.0", features = [ "r1cs" ] }
ark-ff = "0.3.0"
ark-poly = "0.3.0"
ark-bls12-381 = "0.3.0"
ark-std = "0.3.0"
ark-ec = "0.3.0"
ark-poly-commit = { version = "0.3", default-features = false, optional=true }
ark-serialize = { version = "0.3.0", optional = true, default-features = false, features = ["derive"] }

[dev-dependencies]
criterion = "0.3"

[profile.test]
opt-level = 3

[[bench]]
name = "bench_pippenger_msm"
harness = false